# rust-send

./: .gitignore  Cargo.toml  README.md
frontend/templates/: account.html.tera  footer.html.tera  head.html.tera  header.html.tera  home.html.tera  index.html.tera  initScript.js.tera  noscript.html.tera
src/: config.rs  main.rs
src/middleware/: locale.rs
src/routes/: mod.rs  pages.rs
