[package]
name = "rust-send"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
clap = { version = "3.1.1", features = ["derive"] }
fluent = "0.16.0"
futures-util = "0.3"
intl-memoizer = "0.5.1"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.11.2"
tera = "1.15.0"
toml = "0.5"
unic-langid = { version = "0.9.0", features = ["macros"] }
